--- a/taixinkanghu/src/main/res/layout/activity_shopping.xml
+++ b/taixinkanghu/src/main/res/layout/activity_shopping.xml
@@ -1,131 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:orientation="vertical">
 
-	<include layout="@layout/include_header"/>
-
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:orientation="horizontal">
-
-
-		<EditText
-			android:layout_width="match_parent"
-			android:layout_height="28dp"
-			android:layout_marginBottom="5dip"
-			android:layout_marginLeft="15dip"
-			android:layout_marginTop="10dip"
-			android:layout_weight="1"/>
-
-		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="center_vertical"
-			android:layout_marginLeft="15dip"
-			android:layout_marginRight="15dip"
-			android:text="@string/search"/>
-
-
-	</LinearLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+			 android:id="@+id/shopping_page"
+			 android:layout_width="match_parent"
+			 android:layout_height="match_parent">
 
 	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="30dip"
-		android:background="@drawable/bg_bule_frame"
-		android:orientation="horizontal">
-
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_weight="1"
-			android:orientation="horizontal">
-
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical"
-				android:layout_marginLeft="15dip"
-				android:gravity="center_horizontal"
-				android:layout_weight="1"
-				android:text="@string/sales_volume"/>
-
-			<ImageView
-				android:layout_width="10dip"
-				android:layout_height="10dip"
-				android:layout_marginRight="15dip"
-				android:layout_gravity="center_vertical"
-				android:background="@mipmap/img_shopping_down"/>
-
-		</LinearLayout>
-
-		<TextView
-			android:layout_width="1.0dip"
-			android:layout_height="match_parent"
-			android:background="@color/main_color"/>
-
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_weight="1"
-			android:orientation="horizontal">
-
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical"
-				android:layout_marginLeft="15dip"
-				android:gravity="center_horizontal"
-				android:layout_weight="1"
-				android:text="@string/price"/>
-
-			<ImageView
-				android:layout_width="10dip"
-				android:layout_height="10dip"
-				android:layout_marginRight="15dip"
-				android:layout_gravity="center_vertical"
-				android:background="@mipmap/img_shopping_down"/>
-
-		</LinearLayout>
-
-		<TextView
-			android:layout_width="1.0dip"
-			android:layout_height="match_parent"
-			android:background="@color/main_color"/>
-
-		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_weight="1"
-			android:orientation="horizontal">
-
-			<TextView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center_vertical"
-				android:layout_marginLeft="15dip"
-				android:gravity="center_horizontal"
-				android:layout_weight="1"
-				android:text="@string/screening_conditions"/>
-
-			<ImageView
-				android:layout_width="10dip"
-				android:layout_height="10dip"
-				android:layout_marginRight="15dip"
-				android:layout_gravity="center_vertical"
-				android:background="@mipmap/img_shopping_down"/>
-
-		</LinearLayout>
-
-
-	</LinearLayout>
-
-	<ListView
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_weight="1"></ListView>
+		android:orientation="vertical">
 
-	<include layout="@layout/include_main_button"/>
-</LinearLayout>
+		<include layout="@layout/include_header"
+			android:id="@+id/title"/>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal"
+			android:id="@+id/search_region">
+
+			<EditText
+				android:layout_width="match_parent"
+				android:layout_height="28dp"
+				android:layout_marginBottom="5dip"
+				android:layout_marginLeft="15dip"
+				android:layout_marginTop="10dip"
+				android:layout_weight="1"
+				android:id="@+id/search_bar"/>
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center_vertical"
+				android:layout_marginLeft="15dip"
+				android:layout_marginRight="15dip"
+				android:text="@string/search"
+				android:id="@+id/search_btn"/>
+
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="30dip"
+			android:background="@drawable/bg_bule_frame"
+			android:orientation="horizontal"
+			android:id="@+id/button_group_region">
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:orientation="horizontal"
+				android:id="@+id/sales_volume_sort_btn">
+
+				<TextView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center_vertical"
+					android:layout_marginLeft="15dip"
+					android:layout_weight="1"
+					android:gravity="center_horizontal"
+					android:text="@string/sales_volume"
+					android:id="@+id/sales_volume_sort_btn_text"/>
+
+				<ImageView
+					android:layout_width="10dip"
+					android:layout_height="10dip"
+					android:layout_gravity="center_vertical"
+					android:layout_marginRight="15dip"
+					android:background="@mipmap/img_shopping_down"
+					android:id="@+id/sales_volume_sort_order_img"/>
+
+			</LinearLayout>
+
+			<TextView
+				android:layout_width="1.0dip"
+				android:layout_height="match_parent"
+				android:background="@color/main_color"
+				android:id="@+id/dividing_line"/>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:orientation="horizontal"
+				android:id="@+id/price_sort_btn">
+
+				<TextView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center_vertical"
+					android:layout_marginLeft="15dip"
+					android:layout_weight="1"
+					android:gravity="center_horizontal"
+					android:text="@string/price"
+					android:id="@+id/price_sort_btn_text"/>
+
+				<ImageView
+					android:layout_width="10dip"
+					android:layout_height="10dip"
+					android:layout_gravity="center_vertical"
+					android:layout_marginRight="15dip"
+					android:background="@mipmap/img_shopping_down"
+					android:id="@+id/price_sort_order_img"/>
+
+			</LinearLayout>
+
+			<TextView
+				android:layout_width="1.0dip"
+				android:layout_height="match_parent"
+				android:background="@color/main_color"
+				android:id="@+id/dividing_line"/>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:orientation="horizontal"
+				android:id="@+id/screening_btn">
+
+				<TextView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_gravity="center_vertical"
+					android:layout_marginLeft="15dip"
+					android:layout_weight="1"
+					android:gravity="center_horizontal"
+					android:text="@string/screening_conditions"
+					android:id="@+id/screening_condition_text"/>
+
+				<ImageView
+					android:layout_width="10dip"
+					android:layout_height="10dip"
+					android:layout_gravity="center_vertical"
+					android:layout_marginRight="15dip"
+					android:background="@mipmap/img_shopping_down"
+					android:id="@+id/drop_down_arrow"/>
+
+			</LinearLayout>
+
+
+		</LinearLayout>
+
+		<ListView
+			android:id="@+id/shopping_list_listview"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:layout_weight="1"></ListView>
+
+		<include layout="@layout/include_main_button"
+				 android:id="@+id/bottom"/>
+	</LinearLayout>
+</FrameLayout>
