--- a/taixinkanghu/src/main/res/layout/item_shopping_list.xml
+++ b/taixinkanghu/src/main/res/layout/item_shopping_list.xml
@@ -11,7 +11,8 @@
 		android:layout_marginLeft="15dip"
 		android:layout_marginRight="5dip"
 		android:layout_marginTop="5dip"
-		android:src="@drawable/item_face_1"/>
+		android:src="@drawable/item_face_1"
+		android:id="@+id/goods_img"/>
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -25,7 +26,7 @@
 		android:weightSum="1">
 
 		<TextView
-			android:id="@+id/item_name_title"
+			android:id="@+id/goods_name_title"
 			android:layout_width="wrap_content"
 			android:layout_height="48dp"
 			android:text="@string/item_name_title"
@@ -46,7 +47,7 @@
 				android:textSize="18dip"/>
 
 			<TextView
-				android:id="@+id/item_price"
+				android:id="@+id/goods_price"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="@string/item_price"
@@ -62,7 +63,7 @@
 			android:orientation="horizontal">
 
 			<TextView
-				android:id="@+id/item_evaluation"
+				android:id="@+id/goods_praise_rate"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginRight="25dip"
@@ -70,7 +71,7 @@
 				android:textSize="12dip"/>
 
 			<TextView
-				android:id="@+id/item_evaluation_times"
+				android:id="@+id/goods_evaluation_times"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="@string/item_evaluation_times"
